--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@tabler/icons-react": "^2.24.0",
         "class-variance-authority": "^0.6.1",
         "clsx": "^1.2.1",
+        "cmdk": "^0.2.0",
         "tailwind-merge": "^1.13.2",
         "tailwindcss-animate": "^1.0.6"
     }
