--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.0.4",
         "@radix-ui/react-avatar": "^1.0.3",
         "@radix-ui/react-checkbox": "^1.0.4",
         "@radix-ui/react-dialog": "^1.0.4",
